# cot-bench

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: atomic-rubrics.md  coded-tool-transitions.md  contributing.md  domain-category-roadmap.md  dual-control.md  expert-review.md  first-run.md  governance.md  launch-playbook.md  max-setup.md  methodology.md  parameterized-templates.md  recovery-probes.md  rehearsal-runbook.md  roadmap.md  scenario-schema.md
eval/: artifacts.py  config.py  cost.py  pre_registration.py  resume.py  templating.py  tracing.py
frontend/: index.html
infra/: max_serve.py
paper/: README.md  main.tex  references.bib
scripts/: aggregate_results.py  calibration.py  check_publish_ready.py  first_run.sh  generate_data.py  preflight.py  record_published_surface.py  run_eval.py  validate_scenarios.py
tests/: test_aggregate_alpha.py  test_agreement.py  test_artifacts.py  test_bootstrap.py  test_calibration.py  test_check_publish_ready.py  test_config.py  test_corpus_health.py  test_cost.py  test_dual_control.py  test_e2e_offline.py  test_empty_run_guards.py  test_environment_capture.py  test_episode_outcome.py  test_exclude_ungradable.py  test_failure_modes.py  test_frontend_schema.py  test_generate_data.py  test_generation_repair.py  test_holdout.py  test_intra_template_variance.py  test_judge.py  test_judge_deltas.py  test_judge_injection.py  test_length_bias.py  test_macro_failure_aggregates.py  test_negative_assertion_coverage.py  (+21 more)
(+135 files in other folders)
